<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_list_items"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.carlo.androidlabs.ListItemsActivity"
    android:rowCount="2"
    android:columnCount="2"
    android:elevation="1dp">

    <RadioButton
        android:text="@string/radioButton2"
        android:layout_row="0"
        android:layout_column="0"
        android:id="@+id/radioButton2"
        android:layout_columnWeight="1"
        android:gravity="fill" />

    <Switch
        android:text="@string/switchX"
        android:layout_row="1"
        android:layout_column="0"
        android:id="@+id/switch1"
        android:layout_columnWeight="1"
        android:gravity="fill"/>

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="1"
        app:srcCompat="@android:drawable/btn_star_big_on"
        android:id="@+id/imageButton2"
        android:layout_columnWeight="1"
        android:gravity="fill"/>

    <CheckBox
        android:text="@string/checkBox1"
        android:layout_row="0"
        android:layout_column="1"
        android:id="@+id/checkBox"
        android:layout_columnWeight="1"
        android:gravity="fill"
        android:layout_height="wrap_content" />


</GridLayout>
